fix: fix z-index

--- a/online-zoo/source/sass/blocks/donate-form.scss
+++ b/online-zoo/source/sass/blocks/donate-form.scss
@@ -72,7 +72,7 @@
   top: -2%;
   background-image: url("../assets/icons/roller_icon.png");
   background-size: 40px 40px;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .donate-form__price {
